--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             FontIcons
         </h1>
         <div class="bg_lightblue text-center py-3">
-            <button id="filter">
+            <button id="filter" class="bg_transparent">
                 <form action="/action_page.php">
                     <label for="filter" class="px-2 text-white weight_700">FILTRA PER TIPO</label>
-                    <select id="icons" name="icons">
-                      <option value="all">All</option>
-                      <option value="animal">animal</option>
-                      <option value="vegetable">vegetable</option>
-                      <option value="user">user</option>
+                    <select id="icons" name="icons" class="bg-white">
+                      <option value="all" class="bg_lighterblue">All</option>
+                      <option value="animal" class="bg_lighterblue">animal</option>
+                      <option value="vegetable" class="bg_lighterblue">vegetable</option>
+                      <option value="user" class="bg_lighterblue">user</option>
                     </select>
                 </form>
             </button>
