fatta prima card in html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
         </div>
     </header>
 
+    <section id="container" class="bg_grey d-flex justify-content-between">
+        <!-- "brutta copia" parte JS -->
+
+        <div class="card text-center d-flex flex-column justify-content-center">
+            <div class="icon">
+                <i><i class="fas fa-cat    "></i></i>
+            </div>
+            <p class="text-center">
+                CAT
+            </p>
+        </div>
+
+        <!-- fine "brutta copia" parte JS -->
+    </section>
+
     <script src="./assets/js/main.js">
     </script>
 </body>
