--- a/index.html
+++ b/index.html
@@ -33,10 +33,55 @@
         </div>
     </header>
 
-    <section id="container" class="bg_grey d-flex justify-content-between">
+    <section id="container" class="bg_grey d-flex justify-content-between flex-wrap">
         <!-- "brutta copia" parte JS -->
 
-        <div class="card text-center d-flex flex-column justify-content-center">
+        <div class="card text-center col-2 d-flex flex-column justify-content-center my-4 mx-3">
+            <div class="icon">
+                <i><i class="fas fa-cat    "></i></i>
+            </div>
+            <p class="text-center">
+                CAT
+            </p>
+        </div>
+
+        <div class="card text-center col-2 d-flex flex-column justify-content-center my-4 mx-3">
+            <div class="icon">
+                <i><i class="fas fa-cat    "></i></i>
+            </div>
+            <p class="text-center">
+                CAT
+            </p>
+        </div>
+
+        <div class="card text-center col-2 d-flex flex-column justify-content-center my-4 mx-3">
+            <div class="icon">
+                <i><i class="fas fa-cat    "></i></i>
+            </div>
+            <p class="text-center">
+                CAT
+            </p>
+        </div>
+
+        <div class="card text-center col-2 d-flex flex-column justify-content-center my-4 mx-3">
+            <div class="icon">
+                <i><i class="fas fa-cat    "></i></i>
+            </div>
+            <p class="text-center">
+                CAT
+            </p>
+        </div>
+
+        <div class="card text-center col-2 d-flex flex-column justify-content-center my-4 mx-3">
+            <div class="icon">
+                <i><i class="fas fa-cat    "></i></i>
+            </div>
+            <p class="text-center">
+                CAT
+            </p>
+        </div>
+
+        <div class="card text-center col-2 d-flex flex-column justify-content-center my-4 mx-3">
             <div class="icon">
                 <i><i class="fas fa-cat    "></i></i>
             </div>
